--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
+    "openai": "^4.91.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
