--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.17",
     "@tanstack/react-query": "^5.69.0",
+    "@upstash/redis": "^1.34.9",
+    "@vercel/kv": "^3.0.0",
     "axios": "^1.8.4",
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
